# turboquant-vllm

./: .gitignore  AGENTS.md  ARCHITECURE.md  pyproject.toml
COMPONENTS/: C1-variant-registry-and-config.md  C2-offline-precomputation.md  C3-quantization-config-and-kv-cache-method.md  C4-C5-backend-metadata-and-impl.md  C6-C7-kernels-and-plugin-registration.md
extra-docs/agent-findings-vllm/: vllm-architecture-map-kv-cache-plugin-integration.md  vllm-custom-quantization-kv-metadata-pre-attention-tensors.md  vllm-v1-attention-plugin-dispatch-deep-dive.md  vllm-v1-kv-cache-allocation-deep-dive.md  vllm-v1-split-kv-cache-execution-deep-dive.md
extra-docs/agent-hld-guide/: 01-kv-allocation-and-memory-illusion.md  02-split-store-forward-and-metadata-flow.md  03-checkpoint-to-attention-buffers.md  04-plugin-out-of-tree-backend.md
extra-docs/deep-dive-understanding/: 01-the-memory-illusion-kv-allocation.md  02-split-execution-the-read-write-barrier.md  03-metadata-and-quantization-injection.md  04-the-plugin-heist-hijacking-vllm.md  turboquant_algorithm.md
tests/c1/: __init__.py  test_kv_spec.py  test_tq_config_layout.py  test_variant_registry.py
tests/c2/: __init__.py  test_c1_c2_integration.py  test_codebook.py  test_matrices.py
tests/c3/: __init__.py  test_kv_cache_method.py  test_quant_config.py  test_register_all.py
tests/c4/: test_backend.py  test_metadata.py
tests/c5/: test_impl.py
tests/c6/: test_scaffolding.py
tests/c7/: test_packaging_and_registration.py
tilelang_turboquant/: __init__.py  plugin.py
tilelang_turboquant/backend/: __init__.py  (+3 more)
(+17 files in other folders)
